--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+
 <!doctype html>
 <html lang="en">
   <head>
@@ -8,31 +9,44 @@
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <link rel="stylesheet" href="style.css">
-    <title>SMIT website</title>
+    <title>Saylani Welfare Trust - PK</title>
   </head>
   <body>
       <!--First navigation bar-->
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <nav class="navbar navbar-expand-lg navbar-light bg-light" id="navbar">
         <div class="container-fluid">
-          <a class="navbar-brand" href="#">Navbar</a>
+          <div class="logo">
+          <img src="./logo_saylaniwelfare.22bf709605809177256c.png" alt="logo" width="280px">
+        </div>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
           <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav">
               <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="#">Home</a>
+                <a class="nav-link active" id="home" aria-current="page" href="#">Home</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#">Features</a>
+                <a class="nav-link active" id="about" aria-current="page" href="#">About</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#">Pricing</a>
+                <a class="nav-link active" id="services" aria-current="page" href="#">Services</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
+                <a class="nav-link active" id="media" aria-current="page" href="#">Media</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link active" id="contact" aria-current="page" href="#">Contact Us</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link active" id="bank" aria-current="page" href="#">Bank Details</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link active" id="other" aria-current="page" href="#">Other Websites</a>
               </li>
             </ul>
+            <button type="button" class="btn btn-primary" id="btn1">DONATE NOW</button>
+            <button type="button" class="btn btn-success" id="btn2">BE OUR SPONSOR</button>
           </div>
         </div>
       </nav>
