--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <!doctype html>
 <html lang="en">
   <head>
+    <link rel="icon" href="/tablogo-removebg-preview2.png" type="image/png">
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -12,8 +13,34 @@
     <title>Saylani Welfare Trust - PK</title>
   </head>
   <body>
-      <!--First navigation bar-->
-    <nav class="navbar navbar-expand-lg navbar-light bg-light" id="navbar">
+    <!--First navigation bar-->
+    <nav class="navbar navbar-expand-lg bg-body-tertiary" id="nav2">
+      <div class="container-fluid">
+        
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNav">
+          <ul class="navbar-nav">
+            <img src="/Capt3ure.PNG" id="emailpng"  alt="">
+            <li class="nav-item">
+              <a class="nav-link disabled" aria-disabled="true">info@SaylaniWelfare.com</a>
+            </li>
+            <img src="/call.PNG" id="callpng"  alt="">
+            <li class="nav-item">
+              <a class="nav-link disabled" aria-disabled="true">021-111-729-526</a>
+            </li><li class="nav-item">
+              <a class="nav-link disabled" aria-disabled="true">03111729526</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link disabled" aria-disabled="true">Visit Our other websites:</a>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </nav>
+    <!--Second navigation bar-->
+    <nav class="navbar navbar-expand-lg navbar-light bg-white" id="navbar">
         <div class="container-fluid">
           <div class="logo">
           <img src="./logo_saylaniwelfare.22bf709605809177256c.png" alt="logo" width="280px">
@@ -46,7 +73,7 @@
               </li>
             </ul>
             <button type="button" class="btn btn-primary" id="btn1">DONATE NOW</button>
-            <button type="button" class="btn btn-success" id="btn2">BE OUR SPONSOR</button>
+            <button type="button" class="btn btn-success" id="btn2">BE A SPONSOR</button>
           </div>
         </div>
       </nav>
