--- a/index.html
+++ b/index.html
@@ -24,12 +24,14 @@
           <ul class="navbar-nav">
             <img src="/Capt3ure.PNG" id="emailpng"  alt="">
             <li class="nav-item">
-              <a class="nav-link disabled" aria-disabled="true">info@SaylaniWelfare.com</a>
+              <a class="nav-link disabled" id="email" aria-disabled="true">info@SaylaniWelfare.com</a>
             </li>
-            <img src="/call.PNG" id="callpng"  alt="">
+            <img src="/call2.PNG" id="callpng"  alt="">
             <li class="nav-item">
-              <a class="nav-link disabled" aria-disabled="true">021-111-729-526</a>
-            </li><li class="nav-item">
+              <a class="nav-link disabled" id="call" aria-disabled="true">021-111-729-526</a>
+            </li>
+            <img src="whatsapp.PNG" id="whatsapp" alt="">
+            <li class="nav-item">
               <a class="nav-link disabled" aria-disabled="true">03111729526</a>
             </li>
             <li class="nav-item">
@@ -43,7 +45,7 @@
     <nav class="navbar navbar-expand-lg navbar-light bg-white" id="navbar">
         <div class="container-fluid">
           <div class="logo">
-          <img src="./logo_saylaniwelfare.22bf709605809177256c.png" alt="logo" width="280px">
+          <img src="./logo_saylaniwelfare.22bf709605809177256c.png"  width="200px">
         </div>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
