--- a/index.html
+++ b/index.html
@@ -22,11 +22,11 @@
         </button>
         <div class="collapse navbar-collapse" id="navbarNav">
           <ul class="navbar-nav">
-            <img src="/emailnew.PNG" id="emailpng"  alt="">
+            <img src="/emailnew.jpg" id="emailpng"  alt="">
             <li class="nav-item">
               <a class="nav-link disabled" id="email" aria-disabled="true">info@SaylaniWelfare.com</a>
             </li>
-            <img src="/callnew.PNG" id="callpng"  alt="">
+            <img src="/callnew.jpg" id="callpng"  alt="">
             <li class="nav-item">
               <a class="nav-link disabled" id="call" aria-disabled="true">021-111-729-526</a>
             </li>
