--- a/index.html
+++ b/index.html
@@ -1,89 +1,115 @@
-
 <!doctype html>
 <html lang="en">
-  <head>
-    <link rel="icon" href="/tablogo-removebg-preview2.png" type="image/png">
-    <!-- Required meta tags -->
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <!-- Bootstrap CSS -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-    <link rel="stylesheet" href="style.css">
-    <title>Saylani Welfare Trust - PK</title>
-  </head>
-  <body>
-    <!--First navigation bar-->
-    <nav class="navbar navbar-expand-lg bg-body-tertiary" id="nav2">
-      <div class="container-fluid">
-        
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarNav">
-          <ul class="navbar-nav">
-            <img src="/emailnew.jpg" id="emailpng"  alt="">
-            <li class="nav-item">
-              <a class="nav-link disabled" id="email" aria-disabled="true">info@SaylaniWelfare.com</a>
-            </li>
-            <img src="/callnew.jpg" id="callpng"  alt="">
-            <li class="nav-item">
-              <a class="nav-link disabled" id="call" aria-disabled="true">021-111-729-526</a>
-            </li>
-            <img src="whatsapp.PNG" id="whatsapp" alt="">
-            <li class="nav-item">
-              <a class="nav-link disabled" aria-disabled="true">03111729526</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link disabled" aria-disabled="true">Visit Our other websites:</a>
-            </li>
-          </ul>
-        </div>
+<head>
+  <link rel="icon" href="/tablogo-removebg-preview2.png" type="image/png">
+  <!-- Required meta tags -->
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+
+  <!-- Bootstrap CSS -->
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+  <link rel="stylesheet" href="style.css">
+  <title>Saylani Welfare Trust - PK</title>
+</head>
+
+<body>
+  <!--First navigation bar-->
+  <nav class="navbar navbar-expand-lg bg-body-tertiary" id="nav2">
+    <div class="container-fluid">
+
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+        aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarNav">
+        <ul class="navbar-nav">
+          <img src="/emailnew.jpg" id="emailpng" alt="">
+          <li class="nav-item">
+            <a class="nav-link disabled" id="email" aria-disabled="true">info@SaylaniWelfare.com</a>
+          </li>
+          <img src="/callnew.jpg" id="callpng" alt="">
+          <li class="nav-item">
+            <a class="nav-link disabled" id="call" aria-disabled="true">021-111-729-526</a>
+          </li>
+          <img src="whatsapp.PNG" id="whatsapp" alt="">
+          <li class="nav-item">
+            <a class="nav-link disabled" aria-disabled="true">03111729526</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link disabled" aria-disabled="true">Visit Our other websites:</a>
+          </li>
+
+          <img src="flag1.png" class="flag" alt="">
+          <img src="flag2.png" class="flag" alt="">
+          <img src="flag3.png" class="flag" alt="">
+          <img src="flag4.png" class="flag" alt="">
+
+        </ul>
       </div>
-    </nav>
-    <!--Second navigation bar-->
-    <nav class="navbar navbar-expand-lg navbar-light bg-white" id="navbar">
-        <div class="container-fluid">
-          <div class="logo">
-          <img src="./logo_saylaniwelfare.22bf709605809177256c.png"  width="200px">
-        </div>
-          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-          </button>
-          <div class="collapse navbar-collapse" id="navbarNav">
-            <ul class="navbar-nav">
-              <li class="nav-item">
-                <a class="nav-link active" id="home" aria-current="page" href="#">Home</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link active" id="about" aria-current="page" href="#">About</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link active" id="services" aria-current="page" href="#">Services</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link active" id="media" aria-current="page" href="#">Media</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link active" id="contact" aria-current="page" href="#">Contact Us</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link active" id="bank" aria-current="page" href="#">Bank Details</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link active" id="other" aria-current="page" href="#">Other Websites</a>
-              </li>
-            </ul>
-            <button type="button" class="btn btn-primary" id="btn1">DONATE NOW</button>
-            <button type="button" class="btn btn-success" id="btn2">BE A SPONSOR</button>
-          </div>
-        </div>
-      </nav>
+    </div>
+  </nav>
+  <!--Second navigation bar-->
+  <nav class="navbar navbar-expand-lg navbar-light bg-white" id="navbar">
+    <div class="container-fluid">
+      <div class="logo">
+        <img src="./logo_saylaniwelfare.22bf709605809177256c.png" width="200px">
+      </div>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+        aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarNav">
+        <ul class="navbar-nav">
+          <li class="nav-item">
+            <a class="nav-link active" id="home" aria-current="page" href="#">Home</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link active" id="about" aria-current="page" href="#">About</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link active" id="services" aria-current="page" href="#">Services</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link active" id="media" aria-current="page" href="#">Media</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link active" id="contact" aria-current="page" href="#">Contact Us</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link active" id="bank" aria-current="page" href="#">Bank Details</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link active" id="other" aria-current="page" href="#">Other Websites</a>
+          </li>
+        </ul>
+        <button type="button" class="btn btn-primary" id="btn1">DONATE NOW</button>
+        <button type="button" class="btn btn-success" id="btn2">BE A SPONSOR</button>
+      </div>
+    </div>
+  </nav>
+
+  <!-- Main Content -->
+  <div class="hero">
+    <div class="heading">
+      <h1>Welcome to the</h1>
+      <h1 id="greenheading">Saylani</h1><h1 id="welfare">Welfare</h1>
+    </div>
+    <h3 id="h3">The largest NGO offering free</h3>
+    <h3 id="h32">education.</h3>
+  </div>
+  <div id="image">
+    <img src="./38.png" id="imageid" alt="">
+  </div>
 
 
 
 
-    <!-- Option 1: Bootstrap Bundle with Popper -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
-  </body>
+  <!-- Option 1: Bootstrap Bundle with Popper -->
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
+    crossorigin="anonymous"></script>
+</body>
+
 </html>
