--- a/index.html
+++ b/index.html
@@ -96,8 +96,12 @@
       <h1>Welcome to the</h1>
       <h1 id="greenheading">Saylani</h1><h1 id="welfare">Welfare</h1>
     </div>
-    <h3 id="h3">The largest NGO offering free</h3>
-    <h3 id="h32">education.</h3>
+    <div id="h3">
+      <h3>The largest NGO offering free</h3>
+    </div>
+    <div id="h32">
+      <h3>education.</h3>
+    </div>
   </div>
   <div id="image">
     <img src="./38.png" id="imageid" alt="">
