--- a/index.html
+++ b/index.html
@@ -102,6 +102,10 @@
     <div id="h32">
       <h3>education.</h3>
     </div>
+    <div id="para">
+      <p>Saylani Welfare is on the ground and already working with local communities to assess how</p>
+      <p>best to support underprivileged families in more than 63 areas of day to day lives.</p>
+    </div>
   </div>
   <div id="image">
     <img src="./38.png" id="imageid" alt="">
