--- a/index.html
+++ b/index.html
@@ -110,6 +110,9 @@
   <div id="image">
     <img src="./38.png" id="imageid" alt="">
   </div>
+  <div id="btn3div">
+    <button id="btn3">Explore More<br>&#8594;</button>
+  </div>
 
 
 
