--- a/index.html
+++ b/index.html
@@ -113,6 +113,21 @@
   <div id="btn3div">
     <button id="btn3">Explore More<br>&#8594;</button>
   </div>
+  <div id="options">
+    <div id="btns">
+      <span id="general">
+        <span id="general2">General</span>
+        <input type="text" id="input" placeholder="0"><span>
+          <span id="rs">Rs.</span>
+        </span>
+    </span>
+      <button>Blood Bank/Thalassemia Treatement</button>
+      <button>Family Kifalat</button>
+      <button>Medical</button>
+      <button>Food</button>
+      <button" style="background-color: #8dc63f; padding-top: 15px; padding-bottom: 15px; padding-left: 34px; padding-right: 34px; border-radius: 5px; margin-left: 70px; color: #ffff; padding-top: 10px;">Quick Donate</button>
+    </div>
+  </div>
 
 
 
