--- a/index.html
+++ b/index.html
@@ -130,6 +130,18 @@
   </div>
 
 
+        <div class="slider-frame">
+            <div class="slide-images">
+                    <div class="img-container">
+                        <img src="/ef68c928-befa-483a-befc-7b4831ba4de3.jpg">
+                    </div>
+                    <div class="img-container">
+                        <img src="/1558de71-52cf-4449-a1fa-d8119fb9154a.jpg">
+                    </div>
+            </div>
+        </div>
+
+
 
 
   <!-- Option 1: Bootstrap Bundle with Popper -->
