--- a/index.html
+++ b/index.html
@@ -25,11 +25,11 @@
       </button>
       <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav">
-          <img src="/emailnew.jpg" id="emailpng" alt="">
+          <img src="emailnew.jpg" id="emailpng" alt="">
           <li class="nav-item">
             <a class="nav-link disabled" id="email" aria-disabled="true">info@SaylaniWelfare.com</a>
           </li>
-          <img src="/callnew.jpg" id="callpng" alt="">
+          <img src="callnew.jpg" id="callpng" alt="">
           <li class="nav-item">
             <a class="nav-link disabled" id="call" aria-disabled="true">021-111-729-526</a>
           </li>
@@ -133,10 +133,10 @@
         <div class="slider-frame">
             <div class="slide-images">
                     <div class="img-container">
-                        <img src="/ef68c928-befa-483a-befc-7b4831ba4de3.jpg">
+                        <img src="ef68c928-befa-483a-befc-7b4831ba4de3.jpg">
                     </div>
                     <div class="img-container">
-                        <img src="/1558de71-52cf-4449-a1fa-d8119fb9154a.jpg">
+                        <img src="./1558de71-52cf-4449-a1fa-d8119fb9154a.jpg">
                     </div>
             </div>
         </div>
