--- a/index.html
+++ b/index.html
@@ -133,10 +133,10 @@
         <div class="slider-frame">
             <div class="slide-images">
                     <div class="img-container">
-                        <img src="ef68c928-befa-483a-befc-7b4831ba4de3.jpg">
+                        <img src="ef68c928-befa-483a-befc-7b4831ba4de3.jpg" alt="image 1">
                     </div>
                     <div class="img-container">
-                        <img src="./1558de71-52cf-4449-a1fa-d8119fb9154a.jpg">
+                        <img src="./1558de71-52cf-4449-a1fa-d8119fb9154a.jpg" alt="image 2">
                     </div>
             </div>
         </div>
